BoaUAT/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>Discount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Quote.OpportunityId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookId__c</fullName>
        <formula>Quote.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PricebookId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Price__c</fullName>
        <formula>Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcloud2__Do_not_show_on_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this item will not be shown on Quote PDF document.</description>
        <inlineHelpText>If checked, this item will not be shown on Quote PDF document.</inlineHelpText>
        <label>Do not show on PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcloud2__PDF_Description__c</fullName>
        <description>Display product name and description in single column in Quote PDF</description>
        <formula>Product2.Name &amp; BR() &amp; PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display product name and description in single column in Quote PDF</inlineHelpText>
        <label>PDF Description</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>